--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# Datos de conexión a MySQL
+DATABASE_HOST=localhost
+DATABASE_USER=root
+DATABASE_PASSWORD=1234@  # La contraseña que me proporcionaste
+DATABASE_NAME=finaldesarrolloweb
+DATABASE_PORT=3306  # El puerto por defecto de MySQL
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Clave secreta para JWT
+JWT_SECRET=tu_clave_secreta_aqui  # Reemplaza esto por una clave secreta segura
