--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "mysql2": "^3.11.3",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sistema-precios-menus": "file:"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.7",
@@ -23,7 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
