--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Datos de conexión a MySQL
 DATABASE_HOST=localhost
 DATABASE_USER=root
-DATABASE_PASSWORD=1234@  # La contraseña que me proporcionaste
+DATABASE_PASSWORD=Test12345.  # La contraseña que me proporcionaste
 DATABASE_NAME=finaldesarrolloweb
 DATABASE_PORT=3306  # El puerto por defecto de MySQL
 
