Fin crud productos

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Datos de conexión a MySQL
 DATABASE_HOST=127.0.0.1
 DATABASE_USER=root
-DATABASE_PASSWORD=1234@  # La contraseña que me proporcionaste
+DATABASE_PASSWORD=
 DATABASE_NAME=finaldesarrolloweb
 DATABASE_PORT=3306  # El puerto por defecto de MySQL
 
