--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.453.0",
     "mysql2": "^3.11.3",
     "next": "14.2.14",
     "react": "^18",
